# tlsf

./: .gitignore  Cargo.toml  README.md  plot.py  rustfmt.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: free.rs  initialize.rs  malloc.rs  memalign.rs
src/: block.rs  consts.rs  header.rs  helpers.rs  lib.rs  mapping.rs  ops.rs
src/block/: anchor.rs  common.rs  free.rs  offset.rs  used.rs
src/ops/: blocks.rs  coalesce.rs  free.rs  initialize.rs  malloc.rs  memalign.rs  merge.rs  pop.rs  push.rs  split.rs  unlink.rs  util.rs
thumbv7em/: Cargo.toml  build.rs
thumbv7em/.cargo/: config.toml
thumbv7em/examples/: bench.rs  global-alloc.rs
thumbv7em/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
